style: :art: Update website spaces

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,10 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
   font-family: "Martel Sans", Helvetica Neue, Segoe UI, Roboto, sans-serif;
   background-color: var(--color-var1);
