--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<div class="container-fluid parent">
-  <router-outlet></router-outlet>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-1"></div>
+    <div class="col-22 bg-danger">
+      <router-outlet></router-outlet>
+    </div>
+    <div class="col-1"></div>
+  </div>
 </div>
