--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -1,2 +1,9 @@
-<app-navbar></app-navbar>
-<app-footer></app-footer>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-1"></div>
+    <div class="col-22">
+      <!-- Home Content Goes Here-->
+    </div>
+    <div class="col-1"></div>
+  </div>
+</div>
