--- a/src/app/Pages/sign-up/sign-up.component.scss
+++ b/src/app/Pages/sign-up/sign-up.component.scss
@@ -10,7 +10,7 @@
 }
 
 .form-container {
-  width: 480px;
+  width: 1000px;
   border-radius: 8px;
   padding: 30px;
   text-align: center;
@@ -18,6 +18,20 @@
   box-shadow: rgba(255, 255, 255, 0.3) 0px 3px 8px;
   backdrop-filter: blur(9px);
   -webkit-backdrop-filter: blur(9px);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 40px;
+}
+
+@media (max-width: 768px) {
+  .form-container {
+    width: 80%;
+    grid-template-columns: 1fr;
+  }
+
+  img {
+    display: none;
+  }
 }
 
 a {
@@ -107,4 +121,10 @@ h1 {
 .form-footer {
   font-size: 1.4rem;
   margin-top: 28px;
+}
+
+.intro-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
