--- a/src/app/Pages/sign-in/sign-in.component.scss
+++ b/src/app/Pages/sign-in/sign-in.component.scss
@@ -11,7 +11,7 @@
 
 .form-container {
   width: 1000px;
-  height: 600px;
+  height: 500px;
   border-radius: 8px;
   padding: 30px;
   text-align: center;
@@ -25,12 +25,22 @@
 }
 
 .first-column {
-  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.second-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 90%;
 }
 
 .intro-img {
-  width: 350px;
-  height: 350px;
+  width: 400px;
+  height: 400px;
 }
 
 @media (max-width: 1024px) {
@@ -53,11 +63,15 @@
   .intro-img {
     display: none;
   }
+
+  .second-column {
+    width: 100%;
+  }
 }
 
 h1 {
   font-size: 2.6rem;
-  margin-bottom: 4px;
+  margin-bottom: 40px;
   color: #fff;
 }
 
@@ -106,7 +120,7 @@ h1 {
 
 .btn {
   display: block;
-  margin: 20px auto 32px auto;
+  margin: 32px auto;
   width: 50%;
   background: #fff;
   color: #000;
@@ -143,11 +157,4 @@ h1 {
   color: #fff;
   text-decoration: none;
   margin-left: 8px;
-}
-
-.second-column {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
