footer designing and Responsive

--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -3,6 +3,7 @@
     <div class="col-1"></div>
     <div class="col-22">
       <!-- Home Content Goes Here-->
+    <app-footer></app-footer>
     </div>
     <div class="col-1"></div>
   </div>
