--- a/src/app/Components/carousel/carousel.component.scss
+++ b/src/app/Components/carousel/carousel.component.scss
@@ -2,8 +2,7 @@
   width: 100%;
 
   .myCardCarousel {
-    width: 180px;
-    margin: 0 10px;
+    width: 100%;
     img {
       width: 100%;
       height: 250px;
@@ -30,6 +29,7 @@
     border-radius: 12px;
     width: 35px;
     height: 35px;
+    margin: 0 20px;
     transition: all 0.3s ease-in-out;
 
     .p-icon {
@@ -41,8 +41,18 @@
       background-color: var(--color-var3);
       border-radius: 50%;
     }
+    @media (max-width: "425px") {
+      margin: 0;
+    }
   }
   .p-carousel-indicator {
     display: none;
+  }
+  .p-carousel-item {
+    padding: 0 10px;
+    // @media (max-width: "600px") {
+    //   margin: 0;
+    //   padding: 0 10px;
+    // }
   }
 }
