--- a/src/app/Pages/home/home.component.scss
+++ b/src/app/Pages/home/home.component.scss
@@ -23,3 +23,21 @@
 .moviesCarousel {
   margin-bottom: 90px;
 }
+.wrapper {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  column-gap: 4rem;
+  row-gap: 3.5rem;
+  @media (max-width: "1390px") {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  @media (max-width: "1175px") {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  @media (max-width: "768px") {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @media (max-width: "430px") {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
