--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -10,12 +10,12 @@
 
   <div class="links">
     <a routerLink="/">Home</a>
-    <a routerLink="/sign-up">Trending</a>
-    <a routerLink="/sign-in">Cart</a>
+    <a routerLink="/">Trending</a>
+    <a routerLink="/">Cart</a>
   </div>
 
   <div class="btns">
-    <a routerLink="">Login</a>
-    <a routerLink="">Sign Up</a>
+    <button class="secondary-btn" routerLink="/sign-in">Sign In</button>
+    <button class="primary-btn" routerLink="/sign-up">Sign Up</button>
   </div>
 </nav>
