--- a/src/app/Components/hero/hero.component.html
+++ b/src/app/Components/hero/hero.component.html
@@ -1,3 +1,10 @@
-<div class="bg-img"></div>
-
-<div class="content"></div>
+<div class="bg-img">
+  <div class="content">
+    <h1>Hello</h1>
+    <p>
+      Discover the Magic of Cinema with I<span>WATCH</span>, Reserve Your Seat
+      for an Unforgettable Movie Night Adventure Today
+    </p>
+    <a href="#Movies" class="primary-btn">Reserve Now</a>
+  </div>
+</div>
