--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,14 +1,16 @@
 <div class="container">
   <div class="row">
     <div
-      class="col-24 col-md-12 d-flex justify-content-center align-content-center mt-5"
+      class="col-24 col-md-13 d-flex justify-content-center align-content-center mt-5"
     >
-      <div class="d-block mt-3 text-center h-100">
-        <p>Book now for an unforgettable movie experience.</p>
+      <div class="d-block mt-3 text-center h-100 w-100">
+        <p>Book now for an unforgettable movie experience</p>
         <p>Your ticket to cinematic delight awaits !</p>
+
+        <img class="glasses" src="/assets/3d.png" alt="3d" width="400" height="200" />
       </div>
     </div>
-    <div class="col-24 col-md-12 mt-sm-4 d-flex justify-content-center">
+    <div class="col-24 col-md-11 mt-sm-4 d-flex justify-content-center">
       <img
         src="assets/img-footer.png"
         class="w-75"
@@ -61,44 +63,48 @@
     <div class="col-20 offset-2 col-md-4 offset-md-0 mt-5 mt-md-0">
       <p style="font-size: 20px">Join us now !</p>
       <small>Sign up with your email to join us.</small>
-      <label for="email" class="mt-3">email address:</label><br />
-      <input type="email" id="email" required class="mt-1 w-75" /><br />
-      <input type="checkbox" id="emailC" style="margin-top: 12px" />
-      <label for="emailC " class="m-2"
-        >I would like to receive emails from iWatch:</label
-      ><br />
+      <label for="email" class="mt-3">Email address:</label><br />
+      <input
+        type="email"
+        id="email"
+        class="mt-1 w-75"
+        autocomplete="off"
+        placeholder="Email..."
+        required
+        style="padding: 3px; outline: none"
+      />
+      <div style="display: flex; align-items: center">
+        <input type="checkbox" id="emailC" style="margin-top: 12px" />
+        <label for="emailC" class="m-2" style="padding-top: 2.6rem"
+          >I would like to receive emails from iWatch:</label
+        >
+      </div>
       <button class="btn-test py-2 px-3 text-white">Subscribe</button>
     </div>
   </div>
+
   <div class="row my-5">
-    <div class="col-8 col-md-8 d-flex justify-content-start d-md-block ">
-      <img
-        src="./../../../assets/logo.png"
-        style="width: 120px; height: 120px;"
-      />
+    <div class="col-8 col-md-8 d-flex justify-content-start d-md-block">
+      <img src="/assets/logo.png" style="width: 130px; height: 130px" />
     </div>
-    <div class="col-13 col-md-8 d-flex justify-content-center align-items-center">
+    <div
+      class="col-13 col-md-8 d-flex justify-content-center align-items-center"
+    >
       <div
         class="social-media d-flex justify-content-center align-items-center"
       >
         <img
-          src="./../../../assets/social media icons/facebook.png"
+          src="/assets/social media icons/facebook.png"
           class="social-icon"
         />
         <img
-          src="./../../../assets/social media icons/instagram.png"
+          src="/assets/social media icons/instagram.png"
           class="social-icon"
         />
+        <img src="/assets/social media icons/tik-tok.png" class="social-icon" />
+        <img src="/assets/social media icons/youtube.png" class="social-icon" />
         <img
-          src="./../../../assets/social media icons/tik-tok.png"
-          class="social-icon"
-        />
-        <img
-          src="./../../../assets/social media icons/youtube.png"
-          class="social-icon"
-        />
-        <img
-          src="./../../../assets/social media icons/pinterest.png"
+          src="/assets/social media icons/pinterest.png"
           class="social-icon"
         />
       </div>
