--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -1,21 +1,25 @@
-<nav>
-  <div class="logo-container">
-    <p class="logo"><span>I</span>Watch</p>
+<div class="col-1"></div>
+<div class="col-22">
+  <nav>
+    <div class="logo-container">
+      <p class="logo"><span>I</span>Watch</p>
 
-    <div class="search-box">
-      <input type="text" placeholder="Search..." />
-      <a href="#"><i class="search pi pi-search"></i></a>
+      <div class="search-box">
+        <input type="text" placeholder="Search..." />
+        <a href="#"><i class="search pi pi-search"></i></a>
+      </div>
     </div>
-  </div>
 
-  <div class="links">
-    <a routerLink="/">Home</a>
-    <a routerLink="/">Trending</a>
-    <a routerLink="/">Cart</a>
-  </div>
+    <div class="links">
+      <a routerLink="/">Home</a>
+      <a routerLink="/">Trending</a>
+      <a routerLink="/">Cart</a>
+    </div>
 
-  <div class="btns">
-    <button class="secondary-btn" routerLink="/sign-in">Sign In</button>
-    <button class="primary-btn" routerLink="/sign-up">Sign Up</button>
-  </div>
-</nav>
+    <div class="btns">
+      <button class="secondary-btn" routerLink="/sign-in">Sign In</button>
+      <button class="primary-btn" routerLink="/sign-up">Sign Up</button>
+    </div>
+  </nav>
+</div>
+<div class="col-1"></div>
