--- a/src/app/Pages/sign-in/sign-in.component.html
+++ b/src/app/Pages/sign-in/sign-in.component.html
@@ -10,6 +10,10 @@
 
     <div class="second-column">
       <form [formGroup]="signInForm" (ngSubmit)="onSubmit()">
+        <div class="logo">
+          <img src="/assets/logo.png" alt="logo" width="130" height="130" />
+        </div>
+
         <h1>Welcome Back</h1>
 
         <!------------------------------------------------------------------------------------------------->
