--- a/src/app/Pages/sign-in/sign-in.component.scss
+++ b/src/app/Pages/sign-in/sign-in.component.scss
@@ -43,30 +43,8 @@
   height: 400px;
 }
 
-@media (max-width: 1024px) {
-  .form-container {
-    width: 90%;
-  }
-
-  .intro-img {
-    width: 300px;
-    height: 300px;
-  }
-}
-
-@media (max-width: 768px) {
-  .form-container {
-    width: 80%;
-    grid-template-columns: 1fr;
-  }
-
-  .intro-img {
-    display: none;
-  }
-
-  .second-column {
-    width: 100%;
-  }
+.logo {
+  display: none;
 }
 
 h1 {
@@ -157,4 +135,40 @@ h1 {
   color: #fff;
   text-decoration: none;
   margin-left: 8px;
+}
+
+@media (max-width: 1024px) {
+  .form-container {
+    width: 90%;
+  }
+
+  .intro-img {
+    width: 300px;
+    height: 300px;
+  }
+}
+
+@media (max-width: 768px) {
+  .form-container {
+    width: 80%;
+    grid-template-columns: 1fr;
+    height: 700px;
+  }
+
+  .intro-img {
+    display: none;
+  }
+
+  .first-column {
+    display: none;
+  }
+
+  .second-column {
+    width: 100%;
+  }
+
+  .logo {
+    display: block;
+    margin-bottom: 3rem;
+  }
 }
