--- a/src/app/Pages/sign-up/sign-up.component.scss
+++ b/src/app/Pages/sign-up/sign-up.component.scss
@@ -10,7 +10,7 @@
 }
 
 .form-container {
-  width: 1000px;
+  width: 980px;
   height: 600px;
   border-radius: 8px;
   padding: 30px;
@@ -33,26 +33,8 @@
   height: 350px;
 }
 
-@media (max-width: 1024px) {
-  .form-container {
-    width: 90%;
-  }
-
-  .intro-img {
-    width: 300px;
-    height: 300px;
-  }
-}
-
-@media (max-width: 768px) {
-  .form-container {
-    width: 80%;
-    grid-template-columns: 1fr;
-  }
-
-  .intro-img {
-    display: none;
-  }
+.logo {
+  display: none;
 }
 
 h1 {
@@ -150,4 +132,43 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+@media (max-width: 1024px) {
+  .form-container {
+    width: 90%;
+  }
+
+  .intro-img {
+    width: 300px;
+    height: 300px;
+  }
+}
+
+@media (max-width: 768px) {
+  .form-container {
+    width: 80%;
+    grid-template-columns: 1fr;
+  }
+
+  .intro-img {
+    display: none;
+  }
+
+  .logo {
+    display: block;
+    margin: 3rem 0;
+  }
+
+  .first-column {
+    margin-top: 0;
+  }
+
+  .form-container {
+    height: 780px;
+  }
+
+  h1 {
+    font-size: 2.2rem;
+  }
 }
