--- a/src/app/Components/carousel/carousel.component.html
+++ b/src/app/Components/carousel/carousel.component.html
@@ -1,7 +1,7 @@
 @if (movies) {
 <div class="carousel">
   <p-carousel
-    [value]="movies?.slice(27, 50)"
+    [value]="movies?.slice(28, 38)"
     [numVisible]="6"
     [numScroll]="2"
     [circular]="true"
@@ -10,11 +10,11 @@
     <ng-template let-movie pTemplate="item">
       <div class="myCardCarousel">
         <div class="myimg">
-          <img src="{{ movie.posterURL }}" class="w-6 shadow-2" />
+          <img src="{{ movie.Poster }}" class="w-6 shadow-2" />
         </div>
         <div class="txt">
-          <div class="title">{{ movie.title }}</div>
-          <div class="date">15 OCt,2023</div>
+          <div class="title">{{ movie.Title }}</div>
+          <div class="date">{{ movie.Year }}</div>
         </div>
       </div>
     </ng-template>
