fix: :bug: Fix navbar bug + Improve styling

--- a/src/app/Components/movies-cards/movies-cards.component.html
+++ b/src/app/Components/movies-cards/movies-cards.component.html
@@ -6,6 +6,7 @@
       src="{{ movie.Poster }}"
       class="img-responsive myimg"
       alt="Cards Image"
+      loading="lazy"
     />
     <div class="desc">
       <div class="name">{{ movie.Title }}</div>
