--- a/src/app/Components/carousel/carousel.component.scss
+++ b/src/app/Components/carousel/carousel.component.scss
@@ -56,3 +56,16 @@
     // }
   }
 }
+
+h3 {
+  font-size: 3rem;
+  font-weight: 800;
+  color: #fdcc0d;
+  margin-bottom: 30px;
+}
+
+@media (max-width: "600px") {
+  h3 {
+    margin-bottom: 15px;
+  }
+}
