--- a/src/app/Components/navbar/navbar.component.scss
+++ b/src/app/Components/navbar/navbar.component.scss
@@ -1,14 +1,16 @@
 nav {
   display: grid;
-  grid-template-columns: repeat(3, auto);
+  grid-template-columns: 1fr auto 1fr;
   align-items: center;
   justify-content: space-between;
   gap: 20px;
   margin: 22px 60px 0 60px;
   width: 92%;
   background-color: transparent;
+}
 
-  // To make the navbar above image layer
+// To make the navbar above image layer
+.home-page {
   position: absolute;
   z-index: 100;
 }
@@ -45,7 +47,8 @@ nav {
   color: var(--color-var3);
 }
 
-.links a:focus {
+.links a:focus,
+.links a:active {
   border-bottom: 3px solid var(--color-var3);
   color: var(--color-var2);
 }
