--- a/src/app/Components/carousel/carousel.component.html
+++ b/src/app/Components/carousel/carousel.component.html
@@ -1,19 +1,19 @@
 <div id="Trending">
   <h3>Trending</h3>
 
-  @if (movies) {
   <div class="carousel">
     <p-carousel
-      [value]="movies?.slice(28, 38)"
+      *ngIf="movies"
+      [value]="movies.slice(28, 38)"
       [numVisible]="6"
       [numScroll]="2"
       [circular]="true"
       [responsiveOptions]="responsiveOptions"
     >
       <ng-template let-movie pTemplate="item">
-        <div class="myCardCarousel">
+        <div class="myCardCarousel" [routerLink]="'movie/' + movie.id">
           <div class="myimg">
-            <img src="{{ movie.Poster }}" class="w-6 shadow-2" />
+            <img [src]="movie.Poster" class="w-6 shadow-2" />
           </div>
           <div class="txt">
             <div class="title">{{ movie.Title }}</div>
@@ -23,5 +23,4 @@
       </ng-template>
     </p-carousel>
   </div>
-  }
 </div>
