--- a/src/app/Components/carousel/carousel.component.scss
+++ b/src/app/Components/carousel/carousel.component.scss
@@ -3,10 +3,10 @@
 
   .myCardCarousel {
     width: 100%;
+    cursor: pointer;
     img {
       width: 100%;
       height: 250px;
-
       border-radius: 12px;
     }
     .txt {
