--- a/src/app/Components/movies-cards/movies-cards.component.html
+++ b/src/app/Components/movies-cards/movies-cards.component.html
@@ -20,5 +20,11 @@
   <button class="watch-btn">Watch Now!</button>
 </div>
 }@else {
-<div>loading</div>
+<div
+  class="spinner-border text-danger"
+  style="width: 3rem; height: 3rem"
+  role="status"
+>
+  <span class="visually-hidden">Loading...</span>
+</div>
 }
