--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="col-1"></div>
 <div class="col-22">
-  <nav [ngClass]="{ 'home-page': isHomePage }">
+  <nav [ngClass]="{ 'home-page': isHomePage }" class="navbar navbar-expand-lg">
     <div class="logo-container">
       <p class="logo"><span>I</span>Watch</p>
 
