--- a/src/styles.scss
+++ b/src/styles.scss
@@ -474,3 +474,31 @@ body {
     width: 100%;
   }
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mdc-text-field--filled:not(.mdc-text-field--disabled) {
+  background-color: #4a4a4a !important;
+  
+}
+
+
+// done
+.mdc-text-field--filled:not(.mdc-text-field--disabled) .mdc-floating-label--float-above{
+  color: white !important;
+  font-size: smaller;
+}
+.mdc-text-field__input{
+  color: white !important;
+  font-size: smaller;
+}
+.mdc-text-field__input option{
+  color: black !important;
+  font-size: smaller;
+}
+.mdc-text-field--filled:not(.mdc-text-field--disabled) .mdc-floating-label, .mdc-text-field--filled:not(.mdc-text-field--disabled) .mdc-floating-label--float-above {
+  color: white !important;
+  font-size: smaller;
+}
+
