refactor: :recycle: Code improvement

--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -13,7 +13,7 @@
     <div class="col-24 col-md-11 mt-sm-4 d-flex justify-content-center">
       <img
         src="assets/img-footer.png"
-        class="w-75"
+        class="w-75 children"
         style="border-radius: 10px"
       />
     </div>
