--- a/src/app/Components/carousel/carousel.component.scss
+++ b/src/app/Components/carousel/carousel.component.scss
@@ -61,7 +61,7 @@ h3 {
   font-size: 3rem;
   font-weight: 800;
   color: #fdcc0d;
-  margin-bottom: 30px;
+  margin: 0 0 30px 30px;
 }
 
 @media (max-width: "600px") {
