--- a/src/app/Pages/book-your-ticket/book-your-ticket.component.scss
+++ b/src/app/Pages/book-your-ticket/book-your-ticket.component.scss
@@ -82,3 +82,11 @@
 .checkout:hover{
   background-color: #b81d24;
 }
+.test{
+    background-color: red;
+  color: gray;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+}
